--- a/src/components/cronometro/Cronometro.module.scss
+++ b/src/components/cronometro/Cronometro.module.scss
@@ -11,6 +11,7 @@
 		box-shadow: 2px 4px 4px #0000009f;
 		box-sizing: border-box;
 		display: flex;
+		gap: 10px;
 		font-size: 5rem;
 		justify-content: center;
 		margin-bottom: 24px;
